--- a/style.css
+++ b/style.css
@@ -24,3 +24,82 @@ html {
   letter-spacing: 0.5rem;
   margin-bottom: 8px;
 }
+
+.calculator{
+  background-color: rgba(211, 211, 211, 0.473);
+  padding: .75rem;
+  border: 2px solid black
+}
+
+.display{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  background-color: rgb(83, 93, 228);
+  border: 3px solid yellow;
+  border-radius: 15px;
+  padding: .5rem;
+}
+
+.controls{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.memory{
+  display: grid;
+  grid-column: 1/4;
+  grid-row: 1;
+  grid-template-columns: 2fr 3fr;
+}
+
+.operations{
+  display: grid;
+  grid-column: 4/5;
+  grid-row: 1/6;
+  grid-template-rows: auto;
+}
+
+.digits{
+  display:grid;
+  grid-row: 2/6;
+  grid-column: 1/4;
+  grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr;
+  
+}
+
+.controls-buttons{
+  background-color: yellow;
+  box-shadow: 2px 2px;
+  margin-top: .2rem;
+  margin-right: .2rem;
+  height: 4rem;
+  border-radius: 10px;
+}
+
+.operation-buttons{
+  background-color: orange;
+  box-shadow: 2px 2px;
+  /* padding-bottom: .5rem; */
+  margin-top: .2rem;
+  margin-left: .2rem;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+.digits-buttons{
+  background-color:lightgray;
+  border: 1px solid black;
+  box-shadow: 2px 2px;
+  margin: .2rem .2rem;
+  height: 4rem;
+  border-radius: 10px;
+}
+
+.equals{
+  background-color: red;
+}
+
+.zero{
+  grid-column: span 2; 
+}
